--- a/TMS/TMS/Areas/Admin/Views/ManageSC/Impact.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageSC/Impact.cshtml
@@ -38,44 +38,62 @@
 </div>
 <!-- /.row -->
 
-<div class="example-modal">
-    <div class="modal" id="myModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title">Impact</h4>
-                </div>
-                <div class="modal-body">
-                    <form class="form-horizontal">
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">Name&nbsp;<span style="color: red">*</span></label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" placeholder="Name" id="name-txt">
-                                <p id="name-validation-message" class="text-danger" style="display: none"></p>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">Description</label>
-                            <div class="col-sm-10">
-                                <textarea class="form-control" rows="3" placeholder="Description" id="description-txt"></textarea>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="create-btn" onclick="createImpact()">Save changes</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
+<div class="modal" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">Impact</h4>
             </div>
-            <!-- /.modal-content -->
+            <div class="modal-body">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Name&nbsp;<span style="color: red">*</span></label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" placeholder="Name" id="name-txt">
+                            <p id="name-validation-message" class="text-danger" style="display: none"></p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Description</label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" rows="3" placeholder="Description" id="description-txt"></textarea>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="create-btn" onclick="createImpact()">Save changes</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
         </div>
-        <!-- /.modal-dialog -->
+        <!-- /.modal-content -->
     </div>
-    <!-- /.modal -->
+    <!-- /.modal-dialog -->
 </div>
+<!-- /.modal -->
+
+<div class="modal" id="delete-modal">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">Are you sure?</h4>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="yes-btn">Yes</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
 
 @Styles.Render("~/Content/datatables")
 @section scripts{
@@ -108,13 +126,8 @@
                         "render": function (data, type, row) {
 
                             return (
-                                '<button type="button" class="fa fa-pencil" data-toggle="modal" onclick="getImpactDetail(\'' +
-                                    row[0] +
-                                    '\')">' +
-                                    '</button> <button type="button" class="glyphicon glyphicon-trash" onclick="getImpactId(\'' +
-                                    row[0] +
-                                    '\')"></button>');
-
+                                '<button type="button" class="fa fa-pencil" data-toggle="modal" onclick="getImpactDetail(\'' +row[0]+'\')"></button>' +
+                                '<button type="button" class="fa fa-trash-o" onclick="showDeleteModal(\'' + row[0] + '\')"></button>');
                         },
                         "targets": 2
                     }
@@ -246,26 +259,32 @@
             }
         };
 
-        var getImpactId = function (id) {
+        var showDeleteModal = function (id) {
+            $("#yes-btn").attr("onclick", "deleteImpact('" + id + "')");
+            $("#delete-modal").modal("show");
+        };
+
+        var deleteImpact = function (id) {
             $.ajax({
-                url: "/Admin/ManageSC/GetImpactId",
+                url: "/Admin/ManageSC/DeleteImpact",
                 dataType: "json",
-                type: "GET",
-                data: {
-                    id: id
-                },
+                type: "POST",
+                data: { id: id },
                 success: function (data) {
                     if (data.success) {
                         $.notify(data.message, "success");
-                    } else if (data.error) {
+                        $("#delete-modal").modal("hide");
+                        reloadDataTable();
+                    } else if (!data.success) {
                         $.notify(data.message, "error");
+                        $("#delete-modal").modal("hide");
                     }
                 },
                 error: function () {
-                    $.notify("Cannot connect to server!", "error");
+                    $.notify(data.message, "error");
                 }
             });
-            reloadDataTable();
+
         };
     </script>
 }
