--- a/TMS/TMS/Areas/Admin/Views/ManageSC/Urgency.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageSC/Urgency.cshtml
@@ -36,45 +36,63 @@
 </div>
 <!-- /.row -->
 
-<div class="example-modal">
-    <div class="modal" id="myModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title">Urgency</h4>
-                </div>
-                <div class="modal-body">
-                    <form class="form-horizontal">
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">Name&nbsp;<span style="color: red">*</span></label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" placeholder="Impact" id="name-txt">
-                                <p id="name-validation-message" class="text-danger" style="display: none"></p>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">Description</label>
-                            <div class="col-sm-10">
-                                <textarea class="form-control" rows="3" placeholder="Description" id="description-txt"></textarea>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="create-btn" onclick="createUrgency()">Save changes</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
+<div class="modal" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">Urgency</h4>
             </div>
-            <!-- /.modal-content -->
+            <div class="modal-body">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Name&nbsp;<span style="color: red">*</span></label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" placeholder="Impact" id="name-txt">
+                            <p id="name-validation-message" class="text-danger" style="display: none"></p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Description</label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" rows="3" placeholder="Description" id="description-txt"></textarea>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="create-btn" onclick="createUrgency()">Save changes</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
         </div>
-        <!-- /.modal-dialog -->
+        <!-- /.modal-content -->
     </div>
-    <!-- /.modal -->
+    <!-- /.modal-dialog -->
 </div>
-<!-- /.example-modal -->
+<!-- /.modal -->
+
+<div class="modal" id="delete-modal">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">Are you sure?</h4>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="yes-btn">Yes</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
+
 @Styles.Render("~/Content/datatables")
 @section scripts{
     @Scripts.Render("~/bundles/datatables")
@@ -89,25 +107,27 @@
                     url: "/Admin/ManageSC/GetUrgency"
                 },
                 "columnDefs": [
-                {
-                    "render": function (data, type, row) {
-                        return row[1];
+                    {
+                        "render": function (data, type, row) {
+                            return row[1];
+                        },
+                        "targets": 0,
+                        "type": "date"
                     },
-                    "targets": 0,
-                    "type": "date"
-                },
-                {
-                    "render": function (data, type, row) {
-                        return row[2];
+                    {
+                        "render": function (data, type, row) {
+                            return row[2];
+                        },
+                        "targets": 1
                     },
-                    "targets": 1
-                },
-                {
-                    "render": function (data, type, row) {
-                        return '<button type="button" class="fa fa-pencil" data-toggle="modal" onclick="getUrgencyDetail(\'' + row[0] + '\')"></button>';
-                    },
-                    "targets": 2
-                }
+                    {
+                        "render": function (data, type, row) {
+                            return '<button type="button" class="fa fa-pencil" data-toggle="modal" onclick="getUrgencyDetail(\'' + row[0] + '\')"></button>' +
+                                   '<button type="button" class="fa fa-trash-o" onclick="showDeleteModal(\'' + row[0] + '\')"></button>';
+
+                        },
+                        "targets": 2
+                    }
                 ]
             });
         var reloadDataTable = function () {
@@ -235,6 +255,36 @@
             }
 
         };
+
+        var showDeleteModal = function (id) {
+            $("#yes-btn").attr("onclick", "deleteUrgency('" + id + "')");
+            $("#delete-modal").modal("show");
+        };
+
+        var deleteUrgency = function (id) {
+            $.ajax({
+                url: "/Admin/ManageSC/DeleteUrgency",
+                dataType: "json",
+                type: "post",
+                data: {
+                    id: id
+                },
+                success: function (data) {
+                    if (data.success) {
+                        $("#delete-modal").modal("hide");
+                        $.notify(data.message, "success");
+                        reloadDataTable();
+                    } else if (!data.success) {
+                        $("#delete-modal").modal("hide");
+                        $.notify(data.message, "error");
+                    }
+                },
+                error: function () {
+                    $.notify(data.message, "error");
+                }
+            });
+        }
+
     </script>
 }
 
