--- a/TMS/TMS/Areas/Admin/Views/ManageUser/CreateHelpDesk.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/CreateHelpDesk.cshtml
@@ -1,4 +1,4 @@
-﻿@model TMS.Models.HelpDeskRegisterViewModel
+﻿@model TMS.ViewModels.HelpDeskRegisterViewModel
 @{
     ViewBag.Title = "Create Help Desk";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
