--- a/TMS/TMS/Areas/Admin/Views/ManageUser/EditAdmin.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/EditAdmin.cshtml
@@ -1,4 +1,4 @@
-﻿@model TMS.Models.AdminRegisterViewModel
+﻿@model TMS.ViewModels.AdminRegisterViewModel
 @{
     ViewBag.Title = "Edit Admin";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
