--- a/TMS/TMS/Areas/Admin/Views/ManageUser/EditRequester.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/EditRequester.cshtml
@@ -1,4 +1,4 @@
-﻿@model TMS.Models.RequesterRegisterViewModel
+﻿@model TMS.ViewModels.RequesterRegisterViewModel
 @{
     ViewBag.Title = "Edit Requester";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
