--- a/TMS/TMS/Areas/Admin/Views/ManageUser/EditTechnician.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/EditTechnician.cshtml
@@ -1,4 +1,4 @@
-﻿@model TMS.Models.TechnicianRegisterViewModel
+﻿@model TMS.ViewModels.TechnicianRegisterViewModel
 @{
     ViewBag.Title = "Edit Technician";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
