--- a/TMS/TMS/Areas/Admin/Views/ManageUser/EditRequester.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/EditRequester.cshtml
@@ -1,4 +1,4 @@
-﻿@model TMS.Models.RequesterRegisterViewModel
+﻿@model TMS.ViewModels.RequesterRegisterViewModel
 @{
     ViewBag.Title = "Edit Requester";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -84,6 +84,7 @@
                     <div class="form-group">
                         <div class="col-xs-offset-3 col-xs-9">
                             <input type="submit" class="btn btn-success" value="Save" />
+                            <a href="javascript:void(0)" class="btn btn-info" id="resend-btn">Resend Account Email</a>
                             @Html.ActionLink("Cancel", "Requester", null, new { @class = "btn btn-default" })
                         </div>
                     </div>
@@ -107,4 +108,26 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        $("#resend-btn").click(function () {
+            $.ajax({
+                url: "/Admin/ManageUser/ResendEmail",
+                type: "POST",
+                dataType: "json",
+                data: {
+                    id: '@ViewBag.id'
+                },
+                success: function (data) {
+                    if (data.success) {
+                        $.notify(data.message, "success");
+                    } else {
+                        $.notify(data.message, "error");
+                    }
+                },
+                error: function () {
+                    $.notify("Cannot connect to server!", "error");
+                }
+            });
+        });
+    </script>
 }
