--- a/TMS/TMS/Areas/Admin/Views/ManageUser/Technician.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/Technician.cshtml
@@ -123,7 +123,7 @@
                         "targets": [6],
                         "sortable": false,
                         "render": function (data, type, row) {
-                            return '<center><a href="/Admin/ManageUser/EditTechnician/' + row[0] + '"><i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i></a></center>';
+                            return '<a href="/Admin/ManageUser/EditTechnician/' + row[0] + '" class="btn btn-xs btn-primary"><i class="fa fa-pencil"></i></a>';
                         }
                     }
                 ]
