--- a/TMS/TMS/Areas/Admin/Views/ManageSC/Priority.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageSC/Priority.cshtml
@@ -1,14 +1,14 @@
 ﻿@{
     ViewBag.Title = "Priority";
-    Layout = "~/Views/Shared/TMSLayout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
 <div class="row">
     <div class="col-xs-12">
         <div class="box box-primary">
             <div class="box-header padding-bottom-20">
-                <button type="button" class="btn" data-target="#myModal" onclick="showCreateModal()">
-                    Create New Priority
+                <button type="button" class="btn btn-success" data-target="#myModal" onclick="showCreateModal()">
+                    New Priority
                 </button>
             </div>
             <!-- /.box-header -->
