--- a/TMS/TMS/Areas/Admin/Views/ManageSC/Urgency.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageSC/Urgency.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
     ViewBag.Title = "Urgency";
-    Layout = "~/Views/Shared/TMSLayout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 <div class="row">
     <div class="col-xs-12">
         <div class="box box-primary">
             <div class="box-header padding-bottom-20">
-                <button type="button" class="btn" onclick="showCreateModal()">
-                    Create New Urgency
+                <button type="button" class="btn btn-success" onclick="showCreateModal()">
+                    New Urgency
                 </button>
             </div>
             <!-- /.box-header -->
