--- a/TMS/TMS/Areas/Admin/Views/ManageSC/Impact.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageSC/Impact.cshtml
@@ -8,8 +8,8 @@
     <div class="col-xs-12">
         <div class="box box-primary">
             <div class="box-header padding-bottom-20">
-                <button type="button" class="btn" onclick="showCreateModal()">
-                    Create New Impact
+                <button type="button" class="btn btn-success" onclick="showCreateModal()">
+                    New Impact
                 </button>
             </div>
             <!-- /.box-header -->
