--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Create.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Create.cshtml
@@ -28,14 +28,14 @@
                                         @Html.ValidationMessageFor(model => model.Subject, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
-                                <div class="form-group">
+                                @*<div class="form-group">
                                     @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label col-xs-4" })
                                     <div class="col-md-8">
 
                                         @Html.EditorFor(model => model.Type, new { htmlAttributes = new { @class = "form-control" } })
                                         @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
                                     </div>
-                                </div>
+                                </div>*@
                             </div>
                             <div class="col-xs-6">
                                 <div class="form-group">
@@ -104,7 +104,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xs-6">
+                            @*<div class="col-xs-6">
                                 <div class="form-group">
                                     @Html.LabelFor(model => model.DepartmentID, "Department", htmlAttributes: new { @class = "control-label col-md-4" })
                                     <div class="col-md-8">
@@ -112,7 +112,7 @@
                                         @Html.ValidationMessageFor(model => model.DepartmentID, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
-                            </div>
+                            </div>*@
                         </div>
 
                         <div class="row">
