--- a/TMS/TMS/Areas/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     @Styles.Render("~/Content/datatables")
 
 </head>
-<body class="hold-transition skin-black-light sidebar-mini">
+<body class="hold-transition skin-blue-light sidebar-mini">
     <div class="wrapper">
         <header class="main-header">
             <!-- Logo -->
