--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Create.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Create.cshtml
@@ -217,6 +217,7 @@
 
         $(document)
             .ready(function () {
+                $(":textarea").wysihtml5();
                 setActiveTicketMenu();
                 initRequesterTable();
             });
